[gd_scene load_steps=4 format=3 uid="uid://dy0ywoisr1r7c"]

[ext_resource type="Texture2D" uid="uid://broklmcjnq4qv" path="res://Assets/Textures/Items/Items.png" id="1_x80kn"]
[ext_resource type="Script" path="res://Scripts/UI/HUD/weapon_slot.gd" id="1_xle4m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c1j5r"]
atlas = ExtResource("1_x80kn")
region = Rect2(32, 0, 16, 16)

[node name="WeaponSlot" type="Control"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 3
anchors_preset = 0
offset_right = 42.0
offset_bottom = 42.0
script = ExtResource("1_xle4m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 42.0
offset_bottom = 42.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="WeaponTexture" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_c1j5r")
expand_mode = 1

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="InputPrompt" type="TextureRect" parent="MarginContainer/PanelContainer/BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
